# harley-analytics

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
app/: cli.py  dashboard.py  db.py  glossary.py  indian_dashboard.py  market_overview.py  model_detail.py  queries.py  viz.py
data/: frota_harley_2026_04.duckdb  frota_indian_2026_04.duckdb  model_glossary.csv
pages/: indian_brasil.py  mercado_brasil.py  modelo_detalhe.py
scripts/: import_april_2026_harley.py  import_april_2026_indian.py
